--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         }
     ],
 
+    "editor.mouseWheelZoom": true,
+
     "cucumberautocomplete.syncfeatures": "features/**/*.feature",
     "cucumberautocomplete.gherkinDefinitionPart": "@(given|when|then|step)\\(",
     "cucumberautocomplete.strictGherkinCompletion": false,
