--- a/conf/properties.cfg
+++ b/conf/properties.cfg
@@ -1,6 +1,7 @@
 [Driver]
 # Valid driver types: firefox, chrome, iexplore, edge, safari, ios, android
-type: chrome
+type: firefox
+#type: firefox
 # Configure local driver paths
 gecko_driver_path:
 chrome_driver_path:
@@ -14,8 +15,8 @@ monitor:
 bounds_x:
 bounds_y:
 # Driver options
-implicitly_wait: 5
-explicitly_wait: 10
+implicitly_wait: 20
+explicitly_wait: 50
 reuse_driver: false
 reuse_driver_session: false
 restart_driver_after_failure: true
@@ -55,3 +56,4 @@ build:
 
 [Test]
 url: http://the-internet.herokuapp.com
+urlCarrefour: https://www.carrefour.es
