added configuration, new classes, steps and pages

--- a/conf/properties.cfg
+++ b/conf/properties.cfg
@@ -1,7 +1,7 @@
 [Driver]
 # Valid driver types: firefox, chrome, iexplore, edge, safari, ios, android
-type: firefox
-#type: firefox
+# type: firefox
+type: chrome
 # Configure local driver paths
 gecko_driver_path:
 chrome_driver_path:
@@ -15,8 +15,8 @@ monitor:
 bounds_x:
 bounds_y:
 # Driver options
-implicitly_wait: 20
-explicitly_wait: 50
+implicitly_wait: 5
+explicitly_wait: 10
 reuse_driver: false
 reuse_driver_session: false
 restart_driver_after_failure: true
